samples/_failures_safe/1761001965_056612_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c05dd00.c: In function ‘main’:
./samples/SAFE/__tmp_2c05dd00.c:118:16: error: missing terminating " character
  118 |         printf("\nRecent entries
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2c05dd00.c:118:9: error: expected expression at end of input
  118 |         printf("\nRecent entries
      |         ^~~~~~
./samples/SAFE/__tmp_2c05dd00.c:118:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c05dd00.c:118:9: error: expected declaration or statement at end of input
